guestbook/guestbook-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3600
  selector:
    app: guestbook-ui
